crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__spicecloud-arrow_clickbench_q39_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q39"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                    |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Limit: skip=1000, fetch=10                                                                                                                                                                                                                                                                                                                                              |
|               |   Sort: PageViews DESC NULLS FIRST, fetch=1010                                                                                                                                                                                                                                                                                                                          |
|               |     Projection: hits.URL, count(Int64(1)) AS PageViews                                                                                                                                                                                                                                                                                                                  |
|               |       Aggregate: groupBy=[[hits.URL]], aggr=[[count(Int64(1))]]                                                                                                                                                                                                                                                                                                         |
|               |         Projection: hits.URL                                                                                                                                                                                                                                                                                                                                            |
|               |           Filter: hits.CounterID = Int32(62) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1372636800000000000, None) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1375228800000000000, None) AND hits.IsRefresh = Int16(0) AND hits.IsLink != Int16(0) AND hits.IsDownload = Int16(0) |
|               |             TableScan: hits projection=[EventDate, CounterID, URL, IsRefresh, IsLink, IsDownload]                                                                                                                                                                                                                                                                       |
| physical_plan | GlobalLimitExec: skip=1000, fetch=10                                                                                                                                                                                                                                                                                                                                    |
|               |   SortPreservingMergeExec: [PageViews@1 DESC], fetch=1010                                                                                                                                                                                                                                                                                                               |
|               |     SortExec: TopK(fetch=1010), expr=[PageViews@1 DESC], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                   |
|               |       ProjectionExec: expr=[URL@0 as URL, count(Int64(1))@1 as PageViews]                                                                                                                                                                                                                                                                                               |
|               |         AggregateExec: mode=FinalPartitioned, gby=[URL@0 as URL], aggr=[count(Int64(1))]                                                                                                                                                                                                                                                                                |
|               |           RepartitionExec: partitioning=Hash([URL@0], 16), input_partitions=16                                                                                                                                                                                                                                                                                          |
|               |             AggregateExec: mode=Partial, gby=[URL@0 as URL], aggr=[count(Int64(1))]                                                                                                                                                                                                                                                                                     |
|               |               FilterExec: CounterID@1 = 62 AND to_timestamp(CAST(EventDate@0 AS Int64) * 86400) >= 1372636800000000000 AND to_timestamp(CAST(EventDate@0 AS Int64) * 86400) <= 1375228800000000000 AND IsRefresh@3 = 0 AND IsLink@4 != 0 AND IsDownload@5 = 0, projection=[URL@2]                                                                                       |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                      |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                                                                                                    |
|               |                     DataSourceExec: partitions=16, partition_sizes=[1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1519, 1587, 7343]                                                                                                                                                                                                     |
|               |                                                                                                                                                                                                                                                                                                                                                                         |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
